# trading-model-simulator

./: .cursorrules  .env.example  .gitignore  README.md  StartApp.bat  StartApp.vbs  StartDev3000.bat  StartDev3000.vbs  StartElectronApp.bat  StopApp.vbs  StopTradeTracker.bat  StopTradeTracker.vbs  TradeTracker.ps1  TradeTracker.vbs  check_db.ts  index.html  next.config.js  package-lock.json  package.json  scratch_data.csv  sheet.csv  tsconfig.tsbuildinfo
.agent/workflows/: project-workflow.md
app-electron/: main.js  test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: globals.css  layout.tsx  page.tsx
src/components/: CloudSyncProvider.tsx  ElectronShell.tsx  Header.tsx  ThemeRegistry.tsx
src/components/FactorList/: FactorList.tsx
src/components/LiveTrading/: LiveBestModel.tsx  LiveCharts.tsx  ModelList.tsx  ModelStats.tsx  SessionHistory.tsx  SessionStatsView.tsx  TradeList.tsx  TradePanel.tsx  index.ts
src/components/Notes/: NotesPage.tsx
src/components/Results/: Charts.tsx  ResultsTable.tsx  SimulationHistory.tsx
src/components/Simulation/: SimulationControls.tsx
src/components/TestMode/: BestModelSummary.tsx  SessionHistory.tsx  SessionPanel.tsx  TestCharts.tsx  TestResults.tsx  (+3 more)
src/lib/: authOptions.ts  imageStore.ts  supabase.ts  uploadImage.ts  useShareSession.ts
src/store/: factorStore.ts  liveSessionStore.ts  modelStore.ts  noteStore.ts  settingsStore.ts  simulationStore.ts  testSessionStore.ts  uploadQueueStore.ts
src/theme/: theme.ts
src/types/: index.ts
src/utils/: backupUtils.ts  exportExcel.ts
(+17 files in other folders)
